--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>hello</title>
     </head>
     <body>
-<<<<<<< HEAD
-        My Name is Ibrar Ahmad and it is my first example!
-=======
-        My Name is Ibrar Ahmad and it is my first example!
->>>>>>> 6fc588cd8ce82c23185f46d65b413addf4670b62
+        <h1>my name is ibrar ahmad</h1>
     </body>
 </html>
 </html>
